# MCPAgent

./: Makefile  README.md  pyproject.toml
src/mcp_agent/: agent.py  config.py
src/mcp_agent/servers/: filesystem_server.py  simple_mcp.py
